--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Roopsy by akashkainth</title>
   </head>
   <body>
-    <p><a href="http://dev.roopsymatrix.com/index2.html">click here</a> for next page</p>
+    <p><a href="http://dev.roopsymatrix.com/haircuts/haircuts/index.html">click here</a> for next page</p>
   </body>
 </html>
